commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -656,7 +656,7 @@ body {
   }
 
   .nav-tabs .nav-link {
-    color: #e4e5e6 !important;
+    color: #e4e5e6;
     // background-color: #212631;
     // border-color: #2a303d #2a303d #2a303d;
   }
@@ -1066,7 +1066,7 @@ body {
   }
 
   .nav-tabs .nav-link {
-    color: #e4e5e6 !important;
+    color: #e4e5e6;
     // background-color: #212631;
     // border-color: #2a303d #2a303d #2a303d;
   }
