--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1596,6 +1596,7 @@ label {
     color: #e4e5e6;
     display: flex;
     align-items: center;
+    background-color: #212631 !important;
   }
 
   .jdropdown-default .jdropdown-content {
