Bug for dashboard filter fixed

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -18262,3 +18262,10 @@ label.arrow_label:before {
 .LabelWd{
   width: 133px;
 }
+#shipmentsTBDJexcel {
+  overflow: visible !important;
+}
+.dashboardTable2 > div .jss_filters {
+  top: 0px !important;
+  right: 0;
+}
