--- a/src/scss/shipmentsByCountry.scss
+++ b/src/scss/shipmentsByCountry.scss
@@ -5,3 +5,18 @@
 .jss>tfoot>tr>td {
     font-weight: bold;
 }
+
+.hide-checkbox .select-item input[type="checkbox"] {
+    display: none !important;
+}
+
+.hide-checkbox .select-item {
+    padding-left: 10px !important;
+}
+
+#shipmentJexcel {
+  overflow: visible !important;
+}
+.shipmentJexcel > div .jss_filters {
+  top: 0px !important;
+}
